	  Now we return ICP error and escape the URL before logging.
	- Added configure check for socklen_t (David Luyer).
	- Removed USE_SPLAY #defines; it is now standard.
	- Added FD arg to async IO callbacks (AIOCB) so we can eliminate
	  temporary disk_ctrl_t structures.
	- Changed ENOSPC disk write errors to reduce specific cache_dir
	  sizes, and not just the size of the cache as a whole.

Changes to squid-1.2.beta23 (June 22, 1998):

	- Added Turkish error pages by Tural KAPTAN.
	- Added basic support for Range requests. For most cachable
	  requests, Squid replies with an "Accept-Ranges" header. Upon
	  receiving a potentially cachable Range request for a not
	  cached object, Squid requests the whole object from origin
	  server and then replies with specified range(s) to the
	  client. Multi-range requests are supported. Adjacent
	  overlapping ranges are merged. If-Range requests are
	  supported.  Limitations:  Multi-range requests with out of
	  order ranges are not supported.
	- Made md5.c use standard memcpy and memset if they are
	  avaliable.
	- Memory pools will now shrink if Squid is run-time
	  reconfigured with smaller value of memory_pools_limit tag.
	- Added counter for number of clients (Tomi Hakala).
	- Changed neighbor UP/DOWN algorithm to require 10 failed TCP
	  connections for UP->DOWN transition.
	- Added 'unique_hostname' configuration option when its
	  necessary to have multiple machines with the same visible
	  hostname.
	- Fixed pumpReadFromClient() to not read too many bytes on
	  persistent connections.
	- We can now cache HTTP replies with Set-Cookie.  These evil
	  headers are now filtered out for cache hits on the client
	  side.
	- Fixed SNMP bugs caused by using snmpwalk.
	- Fixed snmp system Group; all objects are now returned.
	- Fixed snmp system Group sysDescr and sysContact.
	- Fixed snmp system Group sysObjectID it now returns a OBJECT
	  IDENTIFIER.
	- Allocate FwdState from mem pools.
	- Minor HTCP progress.