@@ -52,6 +52,10 @@
 	  temporary disk_ctrl_t structures.
 	- Changed ENOSPC disk write errors to reduce specific cache_dir
 	  sizes, and not just the size of the cache as a whole.
+	- Added httpMaybeRemovePublic() to purge public objects for
+	  certain responses even though they are uncachable.  This is
+	  needed, for example, when an initially cachable object
+	  later becomes uncachable.
 
 Changes to squid-1.2.beta23 (June 22, 1998):
 
